fixed alignment

--- a/ngOutDistancing/src/app/components/non-user-landing/non-user-landing.component.css
+++ b/ngOutDistancing/src/app/components/non-user-landing/non-user-landing.component.css
@@ -55,13 +55,14 @@
     max-width:100%;
     margin-left: 10px;
     text-align: center;
-    padding-left: 5px;
+
+
 
 
 
   }
   .card-body img{
-  margin-right: 10px;
+
   object-fit: cover; /*this makes the image in src fit to the size specified below*/
   width: 100%; /* Here you can use wherever you want to specify the width and also the height of the <img>*/
   height: 80%;
